--- a/home2.html
+++ b/home2.html
@@ -43,7 +43,7 @@
               <a href="#" class="btn signup">Order Now</a>
 
            <img class="image1" src="https://github.com/zohrasci/Smartwatch.github.io/blob/main/jam%20pink.png">
-          <img class="image2" src="jam ungu.png">
+          <img class="image2" src="https://github.com/zohrasci/Smartwatch.github.io/blob/main/jam%20ungu.png">
 
           
         </div>
