--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quaerat saepe, incidunt tenetur magni, tempore eos eaque iure optio rem possimus architecto nobis corrupti velit cumque adipisci.</p>  <div class="btn-wrapper">
               <a href="#" class="btn signup">Order Now</a>
 
-           <img class="image1" src="https://github.com/zohrasci/Smartwatch.github.io/blob/main/jam%20pink.png">
+           <img class="image1" src="https://raw.githubusercontent.com/zohrasci/Smartwatch.github.io/main/jam%20pink.png">
           <img class="image2" src="https://github.com/zohrasci/Smartwatch.github.io/blob/main/jam%20ungu.png">
 
           
