--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <p>Perangkat ini merupakan gabungan antara jam tangan dengan teknologi smartphone. Ia kini sangat populer karena praktis dan mudah digunakan untuk aktivitas sehari-hari, berolahraga, hingga membantu meningkatkan kesehatan dan kebugaran tubuh.</p>
               <p> penting seperti sensor pengukur detak jantung, jumlah oksigen dalam darah, hingga mendeteksi siklus tidur sangat membantu kita untuk memenuhi kebutuhan tersebut.</p>
                 </div>
-                <img src="https://github.com/zohrasci/Smartwatch.github.io/blob/main/jamputih.png" alt="jam tangan">
+                <img src="https://raw.githubusercontent.com/zohrasci/Smartwatch.github.io/main/jamputih.png" alt="jam tangan">
         </div>
       </div>
       <div class="lesson-wrapper">
