--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                   
                 <p class="txt-content"><span>Watch FIT</span>D18PRO Smart Heart Rate Blood Pressure Detection Pedometer Sports Tracker Smart Watch - Black 105 - Black China</p>
                         </div>
-                        <div class="heading-p"><p>See More</p>
+                        <div class="heading-p"><p></p>
                         </div>
               </div>
 
